<resources>
    <string name="bazaarpay_title_activity_bazaar_pay">BazaarPayActivity</string>
    <string name="bazaarpay_proceed">ادامه</string>
    <string name="bazaarpay_privacy_and_terms_login">&lt;a href="https://app.bazaar-pay.ir/terms-and-conditions">قوانین و شرایط استفاده&lt;/a> را می‌پذیرم.</string>
    <string name="bazaarpay_user_phone_number_hint">شماره تلفن</string>
    <string name="bazaarpay_enter_phone_number">شماره تلفن خود را وارد کنید.</string>
    <string name="bazaarpay_wrong_phone_number">لطفا شماره تلفن خود را به‌ درستی وارد کنید.</string>
    <string name="bazaarpay_no_internet_connection">لطفا از اتصال دستگاه خود به اینترنت مطمئن شوید.</string>
    <string name="bazaarpay_error_server_connection_failure">در برقراری ارتباط مشکلی پیش آمده</string>
    <string name="bazaarpay_no_internet_connection_short">عدم اتصال به اینترنت</string>
    <string name="bazaarpay_error_server_connection_failure_short">ارتباط برقرار نیست.</string>
    <string name="bazaarpay_data_not_found">نتیجه‌ای یافت نشد.</string>
    <string name="bazaarpay_rate_limit_exceeded">لطفا کمی بعد دوباره تلاش کنید</string>
    <string name="bazaarpay_payment_failed">پرداخت شما ناموفق بود!</string>
    <string name="bazaarpay_gateway_payment_failed">پرداخت اینترنتی ناموفق بود!</string>
    <string name="bazaarpay_payment_gateway_not_available">لطفا برای ادامه‌ی پرداخت، یک مرورگر اینترنت نصب کنید.</string>
    <string name="bazaarpay_enter_bazaar_pay">ورود به پرداخت بازارپی</string>
    <string name="bazaarpay_enter_edit_mobile">ویرایش</string>
    <string name="bazaarpay_verification_code_hint">کد تایید</string>
    <string name="bazaarpay_waiting_for_verification_sms">کد تایید به شمارهٔ %s ارسال شد.</string>
    <string name="bazaarpay_resend_verification_sms">پیامک دوباره کد</string>
    <string name="bazaarpay_send_code_by_call">تماس تلفنی گویا</string>
    <string name="bazaarpay_resend_after" formatted="false">ارسال دوباره کد (%s)</string>
    <string name="bazaarpay_resend_after_without_time">ارسال دوباره کد</string>
    <string name="bazaarpay_number_placeholder">%d</string>
    <string name="bazaarpay_title_current_balance">موجودی فعلی:</string>
    <string name="bazaarpay_payment_option_title">پرداخت با بازارپی</string>
    <string name="bazaarpay_select_payment_option">روش پرداخت را انتخاب کنید.</string>
    <string name="bazaarpay_pay">پرداخت</string>
    <string name="bazaarpay_try_again">تلاش دوباره</string>
    <string name="bazaarpay_title_force_login">لطفا برای مشاهده این صفحه، وارد حسابتان شوید.</string>
    <string name="bazaarpay_login">ورود</string>
    <string name="bazaarpay_increase_balance">افزایش موجودی</string>
    <string name="bazaarpay_directdebit_signup">فعال‌سازی</string>
    <string name="bazaarpay_postpaid_activation">فعال‌سازی</string>
    <string name="bazaarpay_credit_pay">پرداخت با‌ ‌اعتبار</string>
    <string name="bazaarpay_skip">رد کردن</string>
    <string name="bazaarpay_next">ادامه</string>
    <string name="bazaarpay_start_activation">شروع فعال‌سازی</string>
    <string name="bazaarpay_set_national_id">ثبت کد ملی</string>
    <string name="bazaarpay_national_id_title">برای فعال‌سازی پرداخت مستقیم از طریق سیستم‌های بانکی، وارد کردن کد ملی صاحب حساب الزامی است.</string>
    <string name="bazaarpay_national_id_hint">کد ملی و شماره همراه ثبت شده در بازارپی باید متعلق به یک فرد باشند.</string>
    <string name="bazaarpay_enter_national_id">کد ملی خود را وارد کنید</string>
    <string name="bazaarpay_national_id_description">۱۰ رقم کد ملی را پشت سرهم و بدون خط فاصله وارد نمایید.</string>
    <string name="bazaarpay_submit_and_continue">ثبت و ادامه</string>
    <string name="bazaarpay_invalid_national_id_error">کد ملی وارد شده معتبر نیست</string>
    <string name="bazaarpay_commit_with_countdown">باشه (%d)</string>
    <string name="bazaarpay_cancel">انصراف</string>
    <string name="bazaarpay_commit">باشه</string>
    <string name="bazaarpay_payment_done_message">پرداخت شما با موفقیت انجام شد.</string>
    <string name="bazaarpay_payment_done_confirm">تا چند ثانیه‌ی دیگر خرید شما تکمیل و به برنامه مورد نظر برمی‌گردید.</string>
    <string name="bazaarpay_bank_list_header_1">کارت بانک شما باید متعلق به یکی از بانک‌های زیر باشد.</string>
    <string name="bazaarpay_bank_list_header_2">لازم است شماره تلفن ثبت شده در حساب بانک و حساب شما یکسان باشد.</string>
    <string name="bazaarpay_header_select_bank_title">بانک خود را انتخاب کنید.</string>
    <string name="bazaarpay_enter_bank_page">ورود به صفحه بانک</string>
    <string name="bazaarpay_direct_debit_bank_list">انتخاب بانک</string>
    <string name="bazaarpay_accept_postpaid_terms">قبول قوانین</string>
    <string name="bazaarpay_postpaid_terms">سرویس اعتبار‌، قابلیتی است که در اختیار برخی از کاربران قرار گرفته است. بازار همواره این اختیار را دارد تا کاربران مشمول این قابلیت را به صلاحدید خود تغییر دهد.\nپس از اتمام اعتبار یا زمانی که مانده این اعتبار برای خرید کافی نباشد، بایستی بدهی خود را تسویه نمایید. پس از تسویه، دوباره قادر خواهید بود به همان میزان از سرویس اعتبار استفاده کنید.\nاستفاده از این قابلیت در حال حاضر رایگان است. با این حال ممکن است در آینده استفاده از این سرویس نیازمند پرداخت حق اشتراک باشد که در این صورت، این تغییرات به اطلاع شما خواهد رسید.</string>
    <string name="bazaarpay_postpaid_terms_title">قوانین و مقررات</string>
    <string name="bazaarpay_dynamic_credit_exceed_amount">حداکثر مبلغ افزایش موجودی %,d تومان است</string>
    <string name="bazaarpay_dynamic_credit_not_enough">حداقل مبلغ افزایش موجودی %,d تومان است</string>
    <string name="bazaarpay_price_placeholder_seperator">%,d تومان</string>
    <string name="bazaarpay_price_placeholder">%d تومان</string>
    <string name="bazaarpay_dynamic_text_price_placeholder">مبلغ</string>
    <string name="bazaarpay_select_enter_dynamic_credit_title">مبلغ را انتخاب یا وارد کنید.</string>
    <string name="bazaarpay_enter_dynamic_credit_title">مبلغ را وارد کنید.</string>
    <string name="bazaarpay_change_account">تغییر حساب کاربری</string>
    <string name="bazaaarpay_change_account_title">تغییر حساب کاربری در بازارپی</string>
    <string name="bazaarpay_logout_message">آیا می‌خواهید از حساب کاربری فعلی بازارپی خارج شوید و پرداخت را با حساب دیگری انجام دهید؟</string>
    <string name="bazaarpay_no">خیر</string>
    <string name="bazaarpay_yes">بله</string>
    <string name="bazaarpay_enter_otp_message">کد تایید ارسال شده به شماره همراه بالا را وارد کنید.</string>
    <plurals name="bazaarpay_seconds">
        <item quantity="one">%d ثانیه</item>
        <item quantity="other">%d ثانیه</item>
    </plurals>
    <string name="bazaarpay_return_to_payment">بازگشت به صفحه‌ پرداخت</string>
    <string name="bazaarpay_complete_payment">تکمیل خرید</string>
    <string name="bazaarpay_dd_auto_renew">تمدید خودکار اشتراک</string>
    <string name="bazaarpay_dd_auto_renew_dsc">با فعال‌سازی پرداخت مستقیم اشتراک شما در سرویس‌های مختلف بدون نیاز به اقدام شما به صورت خودکار تمدید می‌شود.</string>
    <string name="bazaarpay_dd_enable">فعال‌سازی پرداخت مستقیم</string>
    <string name="bazaarpay_dd_enable_dsc">پرداخت مستقیم را از طریق انتقال به صفحه بانک خود فعال کنید. پس از آن می‌توانید در مدت یک سال روزانه ۱۰ تراکنش تا سقف تعیین شده داشته باشید.</string>
    <string name="bazaarpay_dd_disable">غیرفعال‌سازی پرداخت مستقیم</string>
    <string name="bazaarpay_dd_disable_dsc">در صورت نیاز همیشه می‌توانید با رفتن به صفحه کیف‌پول و پرداخت بازار این سرویس را غیر فعال کنید.</string>
    <string name="bazaarpay_dd_guide_title">راهنمای پرداخت مستقیم</string>
    <string name="bazaarpay_dd_subtitle">با فعال‌سازی پرداخت مستقیم، برداشت وجه از حساب خود را به صورت خودکار و بدون نیاز به درگاه بانکی انجام دهید.</string>
    <string name="bazaarpay_dd_start">شروع فعال‌سازی</string>
    <string name="bazaarpay_edit">ویرایش</string>

    //directPay
    <string name="bazaarpay_enable_direct_pay">فعال‌سازی و ادامه</string>
    <string name="bazaarpay_cancel_direct_pay">عدم فعال‌سازی</string>
    <string name="bazaarpay_merchant_message">پیام %s </string>
    <string name="bazaarpay_direct_pay_title">فعال‌سازی «پرداخت خودکار» در %s </string>

    //contentDescriptions
    <string name="bazaarpay_content_description_close">خروج</string>
    <string name="bazaarpay_content_description_back">برگشت</string>
    <string name="bazaarpay_content_description_enter_bazaar_pay">به صفحه پرداخت بازارپی خوش آمدید. بازارپی یک سیستم پرداخت هوشمند و یکپارچه‌است. برای ورود شماره تلفن همراه خود را وارد کنید</string>
    <string name="bazaarpay_content_description_privacy_and_terms_login">مشاهده قوانین استفاده</string>
    <string name="bazaarpay_content_description_register_proceed">با زدن دکمه ادامه قوانین استفاده از بازارپی را می‌پذیرم</string>
    <string name="bazaarpay_content_description_otp_code">کد تایید به شماره همراهی که وارد کردید ارسال شد. کد را وارد کنید. برای وارد کردن کد ۲ دقیقه فرصت دارید</string>
    <string name="bazaarpay_content_description_payment_option_title">شما به صفحه پرداخت بازارپی وارد شدید</string>
    <string name="bazaarpay_content_description_payment_option_selection">روش پرداخت را انتخاب کنید. روش انتخاب شده %s</string>
</resources>