<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/bazaarpay_black_hint">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:animateLayoutChanges="true"
        android:background="@drawable/shape_round_top_only"
        android:minHeight="256dp"
        android:visibility="visible">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/paymentOptionTitle"
            style="@style/Bazaar.Text.Headline2"
            android:textColor="@color/bazaarpay_text_primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/bazaarpay_default_margin_double"
            android:text="@string/bazaarpay_postpaid_terms_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ir.cafebazaar.bazaarpay.widget.RTLImageView
            android:id="@+id/backButton"
            style="@style/Bazaar.Image.Toolbar"
            android:contentDescription="@string/bazaarpay_content_description_back"
            android:layout_marginStart="@dimen/bazaarpay_default_margin_double"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_round_arrow_back_icon_secondary_24dp_old" />

        <View
            android:id="@+id/divider"
            style="@style/Bazaar.HorizontalDivider"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/paymentOptionTitle" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:padding="@dimen/bazaarpay_default_margin_double_half"
            app:layout_constraintBottom_toTopOf="@id/commitButtonDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="@dimen/bazaarpay_peek_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bottomSheetMessage"
                style="@style/Bazaar.Text.Body2"
                android:textColor="@color/bazaarpay_text_secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bazaarpay_postpaid_terms" />
        </ScrollView>

        <View
            android:id="@+id/commitButtonDivider"
            style="@style/Bazaar.HorizontalDivider"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView" />

        <ir.cafebazaar.bazaarpay.widget.button.BazaarPayButton
            android:id="@+id/acceptButton"
            app:bazaarpayButtonTheme="contained"
            app:bazaarpayButtonType="app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/bazaarpay_default_margin_double"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commitButtonDivider"
            app:text="@string/bazaarpay_accept_postpaid_terms" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>