<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:animateLayoutChanges="true"
    android:minHeight="256dp"
    tools:context=".BazaarPayActivity"
    tools:elevation="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/shape_round_top_only"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/paymentTitle"
            style="@style/Bazaar.Text.Headline2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/bazaarpay_default_margin_double"
            android:text="@string/bazaaarpay_change_account_title"
            android:textColor="@color/bazaarpay_text_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/titleDivider"
            style="@style/Bazaar.HorizontalDivider"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/paymentTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/messageTextView"
            style="@style/Bazaar.Text.Subtitle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bazaarpay_default_margin_double"
            android:gravity="center_vertical"
            android:padding="@dimen/bazaarpay_default_margin_double"
            android:textColor="@color/bazaarpay_text_hint"
            android:text="@string/bazaarpay_logout_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleDivider"
            tools:text="آیا می‌خواهید از حساب کاربری فعلی بازارپی خارج شوید و پرداخت را با حساب دیگری انجام دهید؟" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/contentBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="messageTextView" />

        <ir.cafebazaar.bazaarpay.widget.button.BazaarPayButton
            android:id="@+id/cancelButton"
            app:bazaarpayButtonTheme="contained"
            app:bazaarpayButtonType="app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bazaarpay_default_margin_double"
            android:layout_marginTop="@dimen/bazaarpay_default_margin_double"
            android:layout_marginBottom="@dimen/bazaarpay_default_margin_double"
            app:text="@string/bazaarpay_no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/logoutButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/messageTextView"
            tools:visibility="visible" />

        <ir.cafebazaar.bazaarpay.widget.button.BazaarPayButton
            android:id="@+id/logoutButton"
            app:bazaarpayButtonType="app"
            app:bazaarpayButtonTheme="outline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/bazaarpay_default_margin_double"
            android:minHeight="@dimen/bazaarpay_default_button_height"
            app:text="@string/bazaarpay_yes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancelButton"
            app:layout_constraintTop_toBottomOf="@+id/contentBarrier"
            tools:ignore="RtlHardcoded" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>